--- a/src/page.html
+++ b/src/page.html
@@ -6,7 +6,7 @@
   <link href="/dist/output.css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="text-center text-amber-900">
+  <h1 class="text-center text-emerald-600">
     Hello world!
   </h1>
 </body>
